--- a/app/xs-app.json
+++ b/app/xs-app.json
@@ -16,5 +16,5 @@
       "csrfProtection": true
     }
   ],
-  "welcomeFile": "/comsumanthnnrgkitchen"
+  "welcomeFile": "/comspandanannrgkitchen"
 }
