--- a/app/product/webapp/manifest.json
+++ b/app/product/webapp/manifest.json
@@ -13,11 +13,11 @@
     "sourceTemplate": {
       "id": "@sap/generator-fiori:lrop",
       "version": "1.14.0",
-      "toolsId": "b246dc86-1da8-4c33-8127-964fbf1eaabd"
+      "toolsId": "e9baf021-69b1-45e8-b3f6-969f73642be3"
     },
     "dataSources": {
       "mainService": {
-        "uri": "/odata/v4/api-product-srv/",
+        "uri": "/odata/v4/nnrg/",
         "type": "OData",
         "settings": {
           "annotations": [],
@@ -86,33 +86,28 @@
       "routes": [
         {
           "pattern": ":?query:",
-          "name": "A_ProductList",
-          "target": "A_ProductList"
+          "name": "ProductLocalList",
+          "target": "ProductLocalList"
         },
         {
-          "pattern": "A_Product({key}):?query:",
-          "name": "A_ProductObjectPage",
-          "target": "A_ProductObjectPage"
-        },
-        {
-          "pattern": "A_Product({key})/to_Description({key2}):?query:",
-          "name": "A_ProductDescriptionObjectPage",
-          "target": "A_ProductDescriptionObjectPage"
+          "pattern": "ProductLocal({key}):?query:",
+          "name": "ProductLocalObjectPage",
+          "target": "ProductLocalObjectPage"
         }
       ],
       "targets": {
-        "A_ProductList": {
+        "ProductLocalList": {
           "type": "Component",
-          "id": "A_ProductList",
+          "id": "ProductLocalList",
           "name": "sap.fe.templates.ListReport",
           "options": {
             "settings": {
-              "contextPath": "/A_Product",
+              "contextPath": "/ProductLocal",
               "variantManagement": "Page",
               "navigation": {
-                "A_Product": {
+                "ProductLocal": {
                   "detail": {
-                    "route": "A_ProductObjectPage"
+                    "route": "ProductLocalObjectPage"
                   }
                 }
               },
@@ -126,32 +121,14 @@
             }
           }
         },
-        "A_ProductObjectPage": {
+        "ProductLocalObjectPage": {
           "type": "Component",
-          "id": "A_ProductObjectPage",
+          "id": "ProductLocalObjectPage",
           "name": "sap.fe.templates.ObjectPage",
           "options": {
             "settings": {
               "editableHeaderContent": false,
-              "contextPath": "/A_Product",
-              "navigation": {
-                "to_Description": {
-                  "detail": {
-                    "route": "A_ProductDescriptionObjectPage"
-                  }
-                }
-              }
-            }
-          }
-        },
-        "A_ProductDescriptionObjectPage": {
-          "type": "Component",
-          "id": "A_ProductDescriptionObjectPage",
-          "name": "sap.fe.templates.ObjectPage",
-          "options": {
-            "settings": {
-              "editableHeaderContent": false,
-              "contextPath": "/A_Product/to_Description"
+              "contextPath": "/ProductLocal"
             }
           }
         }
